{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 359,
  "lineage": "359a5c4e-39bf-0213-c68f-8766c7e55df6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003af532df03d029a",
            "association_id": "eipassoc-037389f6826d6b675",
            "domain": "vpc",
            "id": "eipalloc-003af532df03d029a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b34a0fbf79fbfe48",
            "private_dns": "ip-10-10-0-85.ec2.internal",
            "private_ip": "10.10.0.85",
            "public_dns": "ec2-52-73-150-151.compute-1.amazonaws.com",
            "public_ip": "52.73.150.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elastic_ip"
            },
            "tags_all": {
              "Name": "elastic_ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:682574356252:instance/i-01f6ddf7145c4f3db",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01f6ddf7145c4f3db",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "standard",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bffbc4dab4aa9152",
            "private_dns": "ip-10-10-1-38.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-058143bfe66153f7a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0e56cb64e4ff8130a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ef76d63addc4f7f",
            "tags": {
              "Name": "private-ip"
            },
            "tags_all": {
              "Name": "private-ip"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e56cb64e4ff8130a"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.bastion_subnets",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:682574356252:instance/i-05ddff3d7caca6849",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ddff3d7caca6849",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "standard",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02b71b1cf58da56a4",
            "private_dns": "ip-10-10-0-86.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.86",
            "public_ip": "44.203.254.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08a7847c460f08b02",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0e56cb64e4ff8130a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0351a1256bc49ab93",
            "tags": {
              "Name": "public-ip"
            },
            "tags_all": {
              "Name": "public-ip"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e56cb64e4ff8130a"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.bastion_subnets",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682574356252:internet-gateway/igw-0dc5c58c791dd8c42",
            "id": "igw-0dc5c58c791dd8c42",
            "owner_id": "682574356252",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0bc98e5640e4eab8b"
          },
          "dependencies": [
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:682574356252:loadbalancer/app/ApplicationLoadBalancer/082f51c3b839e9a8",
            "arn_suffix": "app/ApplicationLoadBalancer/082f51c3b839e9a8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ApplicationLoadBalancer-318626106.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:682574356252:loadbalancer/app/ApplicationLoadBalancer/082f51c3b839e9a8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ApplicationLoadBalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e56cb64e4ff8130a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0351a1256bc49ab93"
              },
              {
                "subnet_id": "subnet-09ef76d63addc4f7f"
              }
            ],
            "subnets": [
              "subnet-0351a1256bc49ab93",
              "subnet-09ef76d63addc4f7f"
            ],
            "tags": {
              "Name": "app-load-balancer"
            },
            "tags_all": {
              "Name": "app-load-balancer"
            },
            "vpc_id": "vpc-0bc98e5640e4eab8b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_lb_target_group.tg",
            "aws_security_group.bastion_sg",
            "aws_subnet.bastion_subnets",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:682574356252:listener/app/ApplicationLoadBalancer/082f51c3b839e9a8/faa1fc956a37de7f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:682574356252:targetgroup/TargetGroup/2db4507538aac713",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:682574356252:listener/app/ApplicationLoadBalancer/082f51c3b839e9a8/faa1fc956a37de7f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:682574356252:loadbalancer/app/ApplicationLoadBalancer/082f51c3b839e9a8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "Listener-1"
            },
            "tags_all": {
              "Name": "Listener-1"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.tg",
            "aws_security_group.bastion_sg",
            "aws_subnet.bastion_subnets",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:682574356252:targetgroup/TargetGroup/2db4507538aac713",
            "arn_suffix": "targetgroup/TargetGroup/2db4507538aac713",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:682574356252:targetgroup/TargetGroup/2db4507538aac713",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg"
            },
            "tags_all": {
              "Name": "tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bc98e5640e4eab8b"
          },
          "dependencies": [
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG_Attach1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:682574356252:targetgroup/TargetGroup/2db4507538aac713-20221130104832340800000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:682574356252:targetgroup/TargetGroup/2db4507538aac713",
            "target_id": "i-05ddff3d7caca6849"
          },
          "dependencies": [
            "aws_instance.public_instance",
            "aws_lb_target_group.tg",
            "aws_security_group.bastion_sg",
            "aws_subnet.bastion_subnets",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG_Attach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:682574356252:targetgroup/TargetGroup/2db4507538aac713-20221130104831919200000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:682574356252:targetgroup/TargetGroup/2db4507538aac713",
            "target_id": "i-01f6ddf7145c4f3db"
          },
          "dependencies": [
            "aws_instance.private_instance",
            "aws_lb_target_group.tg",
            "aws_security_group.bastion_sg",
            "aws_subnet.bastion_subnets",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003af532df03d029a",
            "connectivity_type": "public",
            "id": "nat-02a84752e6e5013a7",
            "network_interface_id": "eni-0b34a0fbf79fbfe48",
            "private_ip": "10.10.0.85",
            "public_ip": "52.73.150.151",
            "subnet_id": "subnet-0351a1256bc49ab93",
            "tags": {
              "Name": "Nat_Gateway"
            },
            "tags_all": {
              "Name": "Nat_Gateway"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_subnet.bastion_subnets",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dc5c58c791dd8c42",
            "id": "r-rtb-07eaefc397a117ddd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07eaefc397a117ddd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.bastion_route_tables",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0408cec9daff883431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02a84752e6e5013a7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0408cec9daff88343",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.bastion_route_tables",
            "aws_subnet.bastion_subnets",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bastion_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682574356252:route-table/rtb-07eaefc397a117ddd",
            "id": "rtb-07eaefc397a117ddd",
            "owner_id": "682574356252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc5c58c791dd8c42",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc98e5640e4eab8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bastion_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682574356252:route-table/rtb-0408cec9daff88343",
            "id": "rtb-0408cec9daff88343",
            "owner_id": "682574356252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02a84752e6e5013a7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc98e5640e4eab8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0849cd90a7fec3264",
            "route_table_id": "rtb-07eaefc397a117ddd",
            "subnet_id": "subnet-0351a1256bc49ab93"
          },
          "dependencies": [
            "aws_route_table.bastion_route_tables",
            "aws_subnet.bastion_subnets",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042548fb36bccb312",
            "route_table_id": "rtb-0408cec9daff88343",
            "subnet_id": "subnet-09ef76d63addc4f7f"
          },
          "dependencies": [
            "aws_route_table.bastion_route_tables",
            "aws_subnet.bastion_subnets",
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682574356252:security-group/sg-0e56cb64e4ff8130a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e56cb64e4ff8130a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221130101836623800000001",
            "name_prefix": "terraform-",
            "owner_id": "682574356252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion_Security_Group"
            },
            "tags_all": {
              "Name": "Bastion_Security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc98e5640e4eab8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bastion_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682574356252:subnet/subnet-0351a1256bc49ab93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0351a1256bc49ab93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682574356252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0bc98e5640e4eab8b"
          },
          "dependencies": [
            "aws_vpc.bastion_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682574356252:subnet/subnet-09ef76d63addc4f7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ef76d63addc4f7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682574356252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0bc98e5640e4eab8b"
          },
          "dependencies": [
            "aws_vpc.bastion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bastion_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682574356252:vpc/vpc-0bc98e5640e4eab8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-06099322034206639",
            "default_route_table_id": "rtb-02676f713efc094c3",
            "default_security_group_id": "sg-081a5443f1fcd5763",
            "dhcp_options_id": "dopt-08dbba81d20f71ba8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc98e5640e4eab8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02676f713efc094c3",
            "owner_id": "682574356252",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            }
          }
        }
      ]
    }
  ]
}